<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page_image"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/login_page_email_textBox"
        android:layout_width="342dp"
        android:layout_height="57dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="585dp"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/login_page_password_textBox"
        android:layout_width="341dp"
        android:layout_height="60dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="505dp"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/Login_page_title"
        android:layout_width="213dp"
        android:layout_height="60dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="649dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_page_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="291dp"
        android:backgroundTint="#aef5dd"
        android:textColor="@color/black"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="32dp"
        android:text="@string/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginForgotPassword"
        android:layout_width="179dp"
        android:layout_height="47dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="196dp"
        android:layout_marginBottom="449dp"
        android:clickable="true"
        android:gravity="left|center"
        android:text="@string/forgot_password"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_page_password_textBox"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/loginDoNotHaveAccountText"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/don_t_have_an_account"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loginCreateAccountHereTextClickable"
        android:layout_width="109dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:gravity="left|center"
        android:text="@string/register_here"
        android:textColor="#23adfc"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loginDoNotHaveAccountText"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>