<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".HomeFragment">

        <ImageButton
            android:id="@+id/Lockbtn"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="376dp"
            android:background="@drawable/splash_bg_gradient"
            android:contentDescription="@string/lockbtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_lock"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/TempBtn"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="219dp"
            android:layout_marginTop="376dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/splash_bg_gradient"
            android:contentDescription="@string/tempbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/thermostat_icon" />

        <ImageButton
            android:id="@+id/LightBtn"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="208dp"
            android:background="@drawable/splash_bg_gradient"
            android:contentDescription="@string/lightbtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_light_icon" />

        <ImageButton
            android:id="@+id/windowBtn"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="219dp"
            android:layout_marginTop="208dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/splash_bg_gradient"
            android:contentDescription="@string/windows"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_window" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="51dp"
            android:layout_height="36dp"
            android:layout_marginStart="164dp"
            android:layout_marginEnd="164dp"
            android:contentDescription="@string/homeBackGround"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_background"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="27dp"
            android:layout_height="15dp"
            android:layout_marginStart="176dp"
            android:layout_marginTop="11dp"
            android:contentDescription="@string/mainHomeIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_home" />

        <TextView
            android:id="@+id/Greetings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="39dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>