<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:id="@+id/forgotPasswordTitle"
        android:layout_width="369dp"
        android:layout_height="74dp"
        android:layout_marginTop="4dp"
        android:text="@string/_forgot"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/forgotPasswordEmailAddressEnter"
        android:layout_width="373dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/enter_your_email_address_forgot"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTitle"
        tools:ignore="TextFields"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/forgotPasswordSendButton"
        android:layout_width="162dp"
        android:layout_height="62dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="52dp"
        android:text="@string/send_me_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordEmailAddressEnter" />
</androidx.constraintlayout.widget.ConstraintLayout>